<resources>
    <string name="app_name">NFC Attendance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hadi Haidar</string>
    <string name="nav_header_subtitle">hmh75@aub.edu.lb</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">My Courses</string>
    <string name="menu_gallery">Account Settings</string>
    <string name="menu_slideshow">Sign Out</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Register Students</string>
    <string name="menu_send">Send</string>
    <string name="back">Back</string>
    <string name="textView333">0</string>
    <string name="register_students">Register students</string>
    <string name="contact_us">Contact Us</string>
</resources>
